<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_header"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/number_of_discs"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/number_of_discs_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="5"
            android:hint="@string/_1_10"
            android:inputType="number"
            android:maxEms="2"
            tools:ignore="AutoFill" />
    </LinearLayout>

    <Button
        android:id="@+id/begin_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#ABABAB"
        android:text="@string/begin_game"
        android:textAllCaps="false" />

</RelativeLayout>