<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grandparent_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TowersOfHanoiActivity">

    <com.example.towerofhanoi.TowerConstraintLayout
        android:id="@+id/towers_container"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="#ADEEEEEE"
        app:layout_constraintBottom_toTopOf="@id/subheads"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </com.example.towerofhanoi.TowerConstraintLayout>

    <LinearLayout
        android:id="@+id/subheads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/towers_container">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a_start"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b_middle"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/c_destination"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subheads">
        <!-- may replace it with incandescent vector -->
        <TextView
            android:id="@+id/numberOfMoves_txtView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/moves"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/minimum_moves_txtView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|end"
            android:text="@string/minimum_moves"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>